--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	},
 	"dependencies": {
 		"express": "4.13.x",
-		"cfenv": "1.0.x"
+		"cfenv": "1.0.x",
+		"clojurescript-nodejs": "*"
 	},
 	"repository": {},
 	"engines": {
